[package]
name = "mip102"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
bytes = "1.4.0"
ed25519-consensus = "2.1.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.40"
